# glOrthoView

./: CMakeLists.txt  axes.shader  dot.shader  glOrthoView.cpp  gui.cpp  gui.h  slicer.shader
data/: stack2npy.py  stack2npy_float.npy  stack2npy_uchar.npy
lib/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h  LICENSE  README.md
